--- a/index.html
+++ b/index.html
@@ -1,60 +1,65 @@
 <!doctype html>
 <html lang="en-US">
-    <head>
-        <meta charset="utf-8" />
-        <title>Xander Rapstine | About Me</title>
-        <meta name="description" content="Xander Rapstine's portfolio">
-        <meta name="keywords" content="Xander Rapstine, web designer, web, website design, web design, web development, frontend development, Austin, Texas, Austin, TX">
-        <meta name="viewport" content="width=device-width, initial-scale=1"/>
-        <link href="assets/css/reset.css" rel="stylesheet" type="text/css" media="screen">
-        <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="screen">
-    </head>
-    <body>
-        <div class="wrapper">
-            <header>
-                <div class="header-inner">
-                    <h1>Xander Rapstine</h1>
-                    <nav class="main-nav">
-                        <ul>
-                            <li><a href="index.html">About</a> | </li>
-                            <li><a href="portfolio.html">Portfolio</a> | </li>
-                            <li><a href="contact.html">Contact</a></li>
-                        </ul>
-                    </nav>
-                </div>
-            </header>
-            <div class="middle">
-                <main>
-                    <h2>About Me</h2>
-                    <hr>
-                    <img class="left landscape" src="assets/images/xander.png" alt="Xander Rapstine" />
-                    <p>I'm a web designer living in Austin, Texas. I have a passion for music, <a href="https://www.coffeekind.com/reading-room/the-three-waves-of-coffee/" target="_blank">third wave coffee</a>, and <a href="http://www.akc.org/dog-breeds/cardigan-welsh-corgi/" target="_blank">Cardigan Welsh Corgis</a>. In addition to general frontend development, I specialize in UI and responsive design. I'm particularly interested in working with musicians and other creative individuals to bring their passions to life.</p>
-                    <br />
-                    <img class="right portrait" src="assets/images/germany.png" alt="map of Germany with German flag" />
-                    <p>I hold a <a href="http://continue.austincc.edu/webmaster" target="_blank">Web Developer Certificate</a> from <a href="http://www.austincc.edu/" target="_blank">Austin Community College</a>, and I have my Master's and Bachelor's Degrees in German Studies from <a href="https://msu.edu/" target="_blank">Michigan State University</a> and <a href="https://www.utexas.edu/" target="_blank">The University of Texas at Austin</a>, respectively.  I have several years experience with html5, css3, and JavaScript, and I customized and designed a <a href="https://www.zendesk.com/" target="_blank">Zendesk</a> help site at my current job. I'm also helping with the implementation of our new <a href="http://www.netsuite.com/portal/home.shtml" target="_blank">NetSuite</a> eCommerce site. More recently, I've been working with JQuery, PHP, and WordPress.</p>
-                    <br />
-                    <img class="left landscape" src="assets/images/band.jpg" alt="Proud Peasant" />
-                    <p>I play in a local progressive rock band called <a href="http://www.proudpeasant.com" target="_blank">Proud Peasant</a>. We released our debut album, Flight, to considerable acclaim in 2014, and it sold over 500 copies across the world. We released a vinyl 7" single entitled Cosmic Sound on noted UK label <a href="http://www.fruitsdemerrecords.com" target="_blank">Fruits de Mer Records</a> in 2016. We were reviewed in print magazines <a href="http://teamrock.com/classic-rock" target="_blank">Classic Rock Magazine</a>, <a href="http://teamrock.com/prog" target="_blank">Prog</a>, and <a href="https://www.shindig-magazine.com/" target="_blank">Shindig</a>, and we had a track featured on <a href="http://www.bbc.co.uk/radio" target="_blank">BBC Radio</a>. We're currently working on recording our second album, entitled Communion.</p>
-                    <br />
-                    <img class="right portrait" src="assets/images/walter.jpg" alt="Walter the Corgi" />
-                    <p>I spend the majority of my free time hanging out with my wife and stepson and our two pets: Walter the Cardigan Welsh Corgi and Oreo the cat. My stepson, Joseph, will be attending <a href="https://www.cornell.edu/" target="_blank">Cornell University</a> next year, and I couldn't be prouder. Hobbies include watching old and/or arty movies, reading fantasy novels and a variety of comic books, playing fantasy RPGs, such as the <a href="http://ultimacodex.com/" target="_blank">Ultima</a> and <a href="http://dragonage.wikia.com/wiki/Dragon_Age_Wiki" target="_blank">Dragon Age</a> series, and taking long walks. I also enjoy watching a variety of sports, especially the <a href="http://texassports.com/" target="_blank">Texas Longhorns</a> and the <a href="http://www.msuspartans.com/" target="_blank">Michigan State Spartans</a>, but also <a href="http://www.packers.com/" target="_blank">pro</a> <a href="http://www.giants.com/" target="_blank">football</a>, <a href="https://www.mavs.com/" target="_blank">basketball</a>, <a href="https://www.nhl.com/mapleleafs" target="_blank">hockey</a>, <a href="https://www.lagalaxy.com/" target="_blank">soccer</a>, and <a href="https://www.mlb.com/redsox" target="_blank">a little baseball</a>.</p>
-                </main>
-                <aside>
-                    <h3>Connect with Me</h3>
-                    <hr>
-                    <nav class="social-nav">
-                        <ul>
-                            <li class="one"><a href="https://github.com/Xandromus" target="_blank"><img src="assets/images/github.png" alt="GitHub logo"></a></li>
-                            <li class="two"><a href="https://www.linkedin.com/in/alexander-rapstine-02164912/" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn logo"></a></li>
-                            <li class="three"><a href="https://stackoverflow.com/users/9170875/xander-rapstine" target="_blank"><img src="assets/images/stackoverflow.png" alt="Stack Overflow logo"></a></li>
-                        </ul>
-                    </nav>
-                </aside>
+
+<head>
+    <meta charset="utf-8" />
+    <title>Xander Rapstine | About Me</title>
+    <meta name="description" content="Xander Rapstine's portfolio">
+    <meta name="keywords" content="Xander Rapstine, web designer, web, website design, web design, web development, frontend development, Austin, Texas, Austin, TX">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="assets/css/reset.css" rel="stylesheet" type="text/css" media="screen">
+    <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="screen">
+</head>
+
+<body>
+    <div class="wrapper">
+        <header>
+            <div class="header-inner">
+                <h1>Xander Rapstine</h1>
+                <nav class="main-nav">
+                    <ul>
+                        <li><a href="index.html">About</a> | </li>
+                        <li><a href="portfolio.html">Portfolio</a> | </li>
+                        <li><a href="contact.html">Contact</a></li>
+                    </ul>
+                </nav>
             </div>
-            <footer>
-                <p>&copy; <script>
-                    document.write(new Date().getFullYear());</script> Xander Rapstine</p>
-            </footer>
+        </header>
+        <div class="middle">
+            <main>
+                <h2>About Me</h2>
+                <hr>
+                <img class="left landscape" src="assets/images/xander.png" alt="Xander Rapstine" />
+                <p>I'm a web designer living in Austin, Texas. I have a passion for music, <a href="https://www.coffeekind.com/reading-room/the-three-waves-of-coffee/" target="_blank">third wave coffee</a>, and <a href="http://www.akc.org/dog-breeds/cardigan-welsh-corgi/" target="_blank">Cardigan Welsh Corgis</a>. In addition to general frontend development, I specialize in UI and responsive design. I'm particularly interested in working with musicians and other creative individuals to bring their passions to life.</p>
+                <br />
+                <img class="right portrait" src="assets/images/germany.png" alt="map of Germany with German flag" />
+                <p>I hold a <a href="http://continue.austincc.edu/webmaster" target="_blank">Web Developer Certificate</a> from <a href="http://www.austincc.edu/" target="_blank">Austin Community College</a>, and I have my Master's and Bachelor's Degrees in German Studies from <a href="https://msu.edu/" target="_blank">Michigan State University</a> and <a href="https://www.utexas.edu/" target="_blank">The University of Texas at Austin</a>, respectively. I have several years experience with html5, css3, and JavaScript, and I customized and designed a <a href="https://www.zendesk.com/" target="_blank">Zendesk</a> help site at my current job. I'm also helping with the implementation of our new <a href="http://www.netsuite.com/portal/home.shtml" target="_blank">NetSuite</a> eCommerce site. More recently, I've been working with JQuery, PHP, and WordPress.</p>
+                <br />
+                <img class="left landscape" src="assets/images/band.jpg" alt="Proud Peasant" />
+                <p>I play in a local progressive rock band called <a href="http://www.proudpeasant.com" target="_blank">Proud Peasant</a>. We released our debut album, Flight, to considerable acclaim in 2014, and it sold over 500 copies across the world. We released a vinyl 7" single entitled Cosmic Sound on noted UK label <a href="http://www.fruitsdemerrecords.com" target="_blank">Fruits de Mer Records</a> in 2016. We were reviewed in print magazines <a href="http://teamrock.com/classic-rock" target="_blank">Classic Rock Magazine</a>, <a href="http://teamrock.com/prog" target="_blank">Prog</a>, and <a href="https://www.shindig-magazine.com/" target="_blank">Shindig</a>, and we had a track featured on <a href="http://www.bbc.co.uk/radio" target="_blank">BBC Radio</a>. We're currently working on recording our second album, entitled Communion.</p>
+                <br />
+                <img class="right portrait" src="assets/images/walter.jpg" alt="Walter the Corgi" />
+                <p>I spend the majority of my free time hanging out with my wife and stepson and our two pets: Walter the Cardigan Welsh Corgi and Oreo the cat. My stepson, Joseph, will be attending <a href="https://www.cornell.edu/" target="_blank">Cornell University</a> next year, and I couldn't be prouder. Hobbies include watching old and/or arty movies, reading fantasy novels and a variety of comic books, playing fantasy RPGs, such as the <a href="http://ultimacodex.com/" target="_blank">Ultima</a> and <a href="http://dragonage.wikia.com/wiki/Dragon_Age_Wiki" target="_blank">Dragon Age</a> series, and taking long walks. I also enjoy watching a variety of sports, especially the <a href="http://texassports.com/" target="_blank">Texas Longhorns</a> and the <a href="http://www.msuspartans.com/" target="_blank">Michigan State Spartans</a>, but also <a href="http://www.packers.com/" target="_blank">pro</a> <a href="http://www.giants.com/" target="_blank">football</a>, <a href="https://www.mavs.com/" target="_blank">basketball</a>, <a href="https://www.nhl.com/mapleleafs" target="_blank">hockey</a>, <a href="https://www.lagalaxy.com/" target="_blank">soccer</a>, and <a href="https://www.mlb.com/redsox" target="_blank">a little baseball</a>.</p>
+            </main>
+            <aside>
+                <h3>Connect with Me</h3>
+                <hr>
+                <nav class="social-nav">
+                    <ul>
+                        <li class="one"><a href="https://github.com/Xandromus" target="_blank"><img src="assets/images/github.png" alt="GitHub logo"></a></li>
+                        <li class="two"><a href="https://www.linkedin.com/in/alexander-rapstine-02164912/" target="_blank"><img src="assets/images/linkedin.png" alt="LinkedIn logo"></a></li>
+                        <li class="three"><a href="https://stackoverflow.com/users/9170875/xander-rapstine" target="_blank"><img src="assets/images/stackoverflow.png" alt="Stack Overflow logo"></a></li>
+                    </ul>
+                </nav>
+            </aside>
         </div>
-    </body>
+        <footer>
+            <p>&copy;
+                <script>
+                document.write(new Date().getFullYear());
+                </script> Xander Rapstine</p>
+        </footer>
+    </div>
+</body>
+
 </html>
