--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Xander Rapstine | About Me</title>
     <meta name="description" content="Xander Rapstine's portfolio">
     <meta name="keywords" content="Xander Rapstine, web designer, web, website design, web design, web development, frontend development, Austin, Texas, Austin, TX">
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
     <link href="assets/css/reset.css" rel="stylesheet" type="text/css" media="screen">
     <link href="assets/css/style.css" rel="stylesheet" type="text/css" media="screen">
 </head>
