added link to new project

--- a/portfolio.html
+++ b/portfolio.html
@@ -30,34 +30,34 @@
                 <h2>Portfolio</h2>
                 <hr>
                 <div class="portfolio-module-holder">
-                    <div class="portfolio-module one">
+                	<div class="portfolio-module one">
+                        <div class="portfolio-title">
+                            <img src="assets/images/mousehunt.png" alt="Star Wars Hangman Game">
+                            <a href="https://xandromus.github.io/hangman-game/" target="_blank">Star Wars Hangman</a>
+                        </div>
+                    </div>
+                    <div class="portfolio-module two">
                         <div class="portfolio-title">
                             <img src="assets/images/kara.png" alt="Yoga by Kara website">
                             <a href="http://www.yogabykara.com" target="_blank">Yoga by Kara</a>
                         </div>
                     </div>
-                    <div class="portfolio-module two">
+                    <div class="portfolio-module three">
                         <div class="portfolio-title">
                             <img src="assets/images/angelus.png" alt="The Angelus website">
                             <a href="http://www.theangelusband.com" target="_blank">The Angelus</a>
                         </div>
                     </div>
-                    <div class="portfolio-module three">
+                    <div class="portfolio-module four">
                         <div class="portfolio-title">
                             <img src="assets/images/basement.png" alt="Basement Avatar Records website">
                             <a href="http://www.basementavatarrecords.com" target="_blank">Basement Avatar Records</a>
                         </div>
                     </div>
-                    <div class="portfolio-module four">
+                    <div class="portfolio-module five">
                         <div class="portfolio-title">
                             <img src="assets/images/capstone.png" alt="Capstone Portfolio website">
                             <a href="http://webtrain.austincc.edu/~arapstine/" target="_blank">Capstone Portfolio</a>
-                        </div>
-                    </div>
-                    <div class="portfolio-module five">
-                        <div class="portfolio-title">
-                            <img src="assets/images/mousehunt.png" alt="Mouse Hunt Game">
-                            <a href="https://scratch.mit.edu/projects/195396693/" target="_blank">Mouse Hunt</a>
                         </div>
                     </div>
                 </div>
