added image for star wars hangman to portfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,7 +32,7 @@
                 <div class="portfolio-module-holder">
                 	<div class="portfolio-module one">
                         <div class="portfolio-title">
-                            <img src="assets/images/mousehunt.png" alt="Star Wars Hangman Game">
+                            <img src="assets/images/starwars.png" alt="Star Wars Hangman Game">
                             <a href="https://xandromus.github.io/hangman-game/" target="_blank">Star Wars Hangman</a>
                         </div>
                     </div>
