added project to potfolio

--- a/portfolio.html
+++ b/portfolio.html
@@ -32,38 +32,38 @@
                 <div class="portfolio-module-holder">
                     <div class="portfolio-module one">
                         <div class="portfolio-title">
+                            <img src="assets/images/office.png" alt="The Office Trivia Game">
+                            <a href="https://xandromus.github.io/triviagame/" target="_blank">The Office Trivia Game</a>
+                        </div>
+                    </div>
+                    <div class="portfolio-module two">
+                        <div class="portfolio-title">
                             <img src="assets/images/dragonage.png" alt="Dragon Age ARENA">
                             <a href="https://xandromus.github.io/week-4-game/" target="_blank">Dragon Age ARENA</a>
                         </div>
                     </div>
-                	<div class="portfolio-module two">
+                    <div class="portfolio-module three">
                         <div class="portfolio-title">
                             <img src="assets/images/starwars.png" alt="Star Wars Hangman Game">
                             <a href="https://xandromus.github.io/hangman-game/" target="_blank">Star Wars Hangman</a>
                         </div>
                     </div>
-                    <div class="portfolio-module three">
+                    <div class="portfolio-module four">
                         <div class="portfolio-title">
                             <img src="assets/images/kara.png" alt="Yoga by Kara website">
                             <a href="http://www.yogabykara.com" target="_blank">Yoga by Kara</a>
                         </div>
                     </div>
-                    <div class="portfolio-module four">
+                    <div class="portfolio-module five">
                         <div class="portfolio-title">
                             <img src="assets/images/angelus.png" alt="The Angelus website">
                             <a href="http://www.theangelusband.com" target="_blank">The Angelus</a>
                         </div>
                     </div>
-                    <div class="portfolio-module five">
+                    <div class="portfolio-module six">
                         <div class="portfolio-title">
                             <img src="assets/images/basement.png" alt="Basement Avatar Records website">
                             <a href="http://www.basementavatarrecords.com" target="_blank">Basement Avatar Records</a>
-                        </div>
-                    </div>
-                    <div class="portfolio-module six">
-                        <div class="portfolio-title">
-                            <img src="assets/images/capstone.png" alt="Capstone Portfolio website">
-                            <a href="http://webtrain.austincc.edu/~arapstine/" target="_blank">Capstone Portfolio</a>
                         </div>
                     </div>
                 </div>
